# QuakeWatch

./: README.md  main.py  pyproject.toml
components/: earthquake_card.py
pages/: json_view.py
styles/: styles.py
utils/: data_fetcher.py  map_helper.py
