[project]
name = "repl-nix-quakewatch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.18.0",
    "pandas>=2.2.3",
    "playsound",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "streamlit-folium>=0.23.2",
    "streamlit>=1.40.1",
]
